--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@angular/service-worker": "^14.0.0",
+    "chart.js": "^4.2.1",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
